--- a/css/styles.css
+++ b/css/styles.css
@@ -363,6 +363,8 @@ img {
   letter-spacing: 0.02em;
   color: var(--main-text-color);
   margin-bottom: 8px;
+  display: flex;
+  text-align: center;
 }
 
 .team-position {
@@ -370,6 +372,11 @@ img {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #434455;
+  padding-bottom: 8px;
+  padding-top: 8px;
+  display: flex;
+
+  text-align: center;
 }
 
 .team-main {
@@ -378,6 +385,31 @@ img {
   gap: 24px;
   padding-left: 0;
   margin: 0;
+}
+
+.ul-team-soc {
+  display: flex;
+  gap: 24px;
+}
+
+.li-team-box {
+  width: 40px;
+  height: 40px;
+}
+
+.team-soc-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: #4d5ae5;
+  border-radius: 50%;
+}
+
+.team-soc-link:hover,
+.team-soc-link:focus {
+  fill: var(--ocean, #404bbf);
 }
 
 .team-box {
@@ -436,6 +468,55 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.footer-text {
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.32px;
+  color: var(--white, #fff);
+  margin-top: 16px;
+  padding-bottom: 16px;
+}
+
+.footer-container {
+  display: flex;
+}
+
+.footer-first-block {
+  margin-right: 120px;
+}
+
+.footer-second-block {
+  margin-right: 120px;
+}
+
+.ul-footer-soc {
+  display: flex;
+  gap: 18px;
+}
+
+.li-footer-box {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-soc-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  fill: #4d5ae5;
+  border-radius: 50%;
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+  fill: var(--ocean, #404bbf);
+}
+
 /**----------------------PRTFOLIO--------------------------*/
 
 .body {
