--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,7 @@ ul {
   color: #2e2f42;
   padding: 24px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
 }
 
 .header-logo:hover,
@@ -176,6 +177,21 @@ ul {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+}
+
+.current {
+  position: relative;
+}
+
+.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 10px;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #404bbf;
 }
 
 /*TODO-------------------HERO----------------------*/
@@ -277,6 +293,19 @@ ul {
   margin-bottom: 8px;
 }
 
+.benefits-box {
+  width: 264px;
+  height: 112px;
+  border-radius: 4px;
+  background: var(--cloud, #f4f4fd);
+  margin-bottom: 8px;
+}
+
+.benefits-icon {
+  margin-left: 100px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
 .products {
   padding-left: 0;
   margin: 0;
