--- a/css/styles.css
+++ b/css/styles.css
@@ -450,6 +450,36 @@ img {
   max-width: 232px;
 }
 
+.customers {
+}
+
+.customers-box-ul {
+  display: flex;
+  gap: 24px;
+}
+
+.customers-box-li {
+  width: 104px;
+  height: 56px;
+}
+
+.customers-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: #8e8f99;
+}
+
+.customers-link:hover,
+.customers-link:focus {
+  background-color: 404BBF;
+}
+
+.customers-icon {
+}
+
 /*TODO-------------------FOOTER----------------------*/
 
 .footer {
