--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@
   align-items: center;
   display: inline-block;
   margin-top: 16px;
-  margin-bottom: 16px;
+
   margin-right: 76px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -72,11 +72,6 @@
 
 .header-contacts {
   display: flex;
-  margin-left: 40px;
-}
-
-.mail {
-  max-width: 153px;
 }
 
 .number {
@@ -91,15 +86,7 @@
 }
 
 .header-logo-web {
-  font-family: "Raleway", sans-serif;
-  font-style: normal;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 117%;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
   color: #2e2f42;
-  margin-right: 76px;
 }
 
 .header-logo-webhead {
@@ -216,9 +203,6 @@ ul {
 }
 
 .hero-container {
-  width: 1440px;
-  height: 600px;
-  max-width: 1440px;
 }
 
 .hero-title {
@@ -229,9 +213,8 @@ ul {
   text-align: center;
   color: var(--title-color);
   max-width: 496px;
-  padding-bottom: 48px;
+  margin-bottom: 48px;
   margin: auto;
-  padding-top: 188px;
 }
 
 .hero-btn {
@@ -366,7 +349,7 @@ img {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   width: 264px;
-  height: 380px;
+
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -392,7 +375,7 @@ img {
   letter-spacing: 0.02em;
   color: var(--main-text-color);
   margin-bottom: 8px;
-  display: flex;
+
   text-align: center;
 }
 
@@ -401,10 +384,7 @@ img {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #434455;
-  padding-bottom: 8px;
-  padding-top: 8px;
-  display: flex;
-
+  margin-bottom: 8px;
   text-align: center;
 }
 
@@ -421,9 +401,12 @@ img {
   gap: 24px;
 }
 
+.team-container {
+}
+
 .li-team-box {
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
 }
 
 .team-soc-link {
@@ -432,13 +415,14 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  fill: #4d5ae5;
+  fill: #f4f4fd;
   border-radius: 50%;
+  background-color: ;
 }
 
 .team-soc-link:hover,
 .team-soc-link:focus {
-  fill: var(--ocean, #404bbf);
+  border-color: rgba(49, 208, 170, 1);
 }
 
 .team-box {
@@ -447,10 +431,19 @@ img {
   padding-top: 32px;
   padding-bottom: 32px;
   text-align: center;
-  max-width: 232px;
 }
 
-.customers {
+.last-title {
+  font-family: Roboto;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px; /* 111.111% */
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+  text-align: center;
+  margin-bottom: 72px;
+  margin-top: 120px;
 }
 
 .customers-box-ul {
@@ -459,25 +452,33 @@ img {
 }
 
 .customers-box-li {
-  width: 104px;
-  height: 56px;
+  height: 88px;
+  width: calc((100% - 120px) / 6);
 }
 
 .customers-link {
   width: 100%;
   height: 100%;
   display: flex;
+  border: 1px solid var(--lightslate, #8e8f99);
+  border-radius: 4px;
   justify-content: center;
   align-items: center;
-  fill: #8e8f99;
+  color: #8e8f99;
 }
 
 .customers-link:hover,
 .customers-link:focus {
-  background-color: 404BBF;
+  fill: #404bbf;
+  border-color: #404bbf;
 }
 
 .customers-icon {
+  fill: currentColor;
+}
+
+.customers {
+  margin-bottom: 120px;
 }
 
 /*TODO-------------------FOOTER----------------------*/
@@ -567,7 +568,7 @@ img {
   height: 100%;
   display: flex;
   justify-content: center;
-  fill: #4d5ae5;
+  fill: #f4f4fd;
   border-radius: 50%;
 }
 
