--- a/css/styles.css
+++ b/css/styles.css
@@ -30,8 +30,8 @@
   display: flex;
   align-items: center;
   display: inline-block;
-  margin-top: 16px;
-
+  margin-top: 25.5px;
+  margin-bottom: 25.5px;
   margin-right: 76px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -246,6 +246,7 @@ ul {
   height: 56px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 48px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -349,8 +350,11 @@ img {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   width: 264px;
-
+  background: var(--white, #fff);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .our-team {
@@ -405,8 +409,11 @@ img {
 }
 
 .li-team-box {
-  width: 100%;
-  height: 100%;
+  width: 40px;
+  height: 40px;
+}
+
+.team-soc-icon {
 }
 
 .team-soc-link {
@@ -417,12 +424,12 @@ img {
   align-items: center;
   fill: #f4f4fd;
   border-radius: 50%;
-  background-color: ;
+  background-color: var(--iris, #4d5ae5);
 }
 
 .team-soc-link:hover,
 .team-soc-link:focus {
-  border-color: rgba(49, 208, 170, 1);
+  background-color: rgba(49, 208, 170, 1);
 }
 
 .team-box {
@@ -469,6 +476,12 @@ img {
 
 .customers-link:hover,
 .customers-link:focus {
+  fill: #404bbf;
+  border-color: #404bbf;
+}
+
+.customers-icon:hover,
+.customers-icon:focus {
   fill: #404bbf;
   border-color: #404bbf;
 }
@@ -568,13 +581,15 @@ img {
   height: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   fill: #f4f4fd;
   border-radius: 50%;
+  background-color: #4d5ae5;
 }
 
 .footer-soc-link:hover,
 .footer-soc-link:focus {
-  fill: var(--ocean, #404bbf);
+  background-color: rgba(49, 208, 170, 1);
 }
 
 /**----------------------PRTFOLIO--------------------------*/
