--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
   --title-color: #ffffff;
   --main-text-color: #2e2f42;
   --second-color: #4d5ae5;
+  --transition;
 }
 
 :body {
@@ -429,7 +430,7 @@ img {
 
 .team-soc-link:hover,
 .team-soc-link:focus {
-  background-color: rgba(49, 208, 170, 1);
+  background-color: #404bbf;
 }
 
 .team-box {
@@ -472,6 +473,7 @@ img {
   justify-content: center;
   align-items: center;
   color: #8e8f99;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:hover,
@@ -670,9 +672,49 @@ img {
 .portf-pics-item {
   width: calc((100% - 48px) / 3);
   width: 360px;
+    overflow: hidden;
+  
+  
 }
+
+.overlay-class{
+  position: relative;
+}
+
+.portf-pics-item:hover .products-cover-block {
+  transform: translate(0);
+}
+
 .menu-items {
   justify-content: center;
+}
+
+.products-cover-block {
+  position: absolute;
+  background-color: #4d5ae5;
+  width: 360px;
+height: 300px;
+  top: 0;
+  left: 0;
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-top: 40px;
+  padding-bottom: 164px;
+  transform: translateY(100%);
+  transition: transform var(--transition);
+  
+}
+
+.products-cover-text {
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.32px;
+  color: var(--cloud, #f4f4fd);
+
+
 }
 
 .block-photos-one {
@@ -711,4 +753,6 @@ img {
 .hero-btn:hover,
 .hero-btn:focus {
   border: 1px solid transparent;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
+    0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
