--- a/css/styles.css
+++ b/css/styles.css
@@ -672,14 +672,8 @@ img {
 .portf-pics-item {
   width: calc((100% - 48px) / 3);
   width: 360px;
-    overflow: hidden;
-  
-  
 }
 
-.overlay-class{
-  position: relative;
-}
 
 .portf-pics-item:hover .products-cover-block {
   transform: translate(0);
@@ -690,35 +684,29 @@ img {
 }
 
 .products-cover-block {
+  position: relative;
+  overflow: hidden;
+}
+
+.products-cover-text{
   position: absolute;
-  background-color: #4d5ae5;
-  width: 360px;
-height: 300px;
   top: 0;
   left: 0;
-  padding-left: 32px;
-  padding-right: 32px;
-  padding-top: 40px;
-  padding-bottom: 164px;
+  width: 100%;
+  height: 100%;
+  background: var(--iris, #4D5AE5);
+  color: #FFFFFF;
+  padding: 10px;
+  line-height: 1.2;
+  overflow: auto;
   transform: translateY(100%);
-  transition: transform var(--transition);
-  
+  transition: transform 250ms linear;
 }
 
-.products-cover-text {
-  font-family: Roboto;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px; /* 150% */
-  letter-spacing: 0.32px;
-  color: var(--cloud, #f4f4fd);
 
-
-}
-
-.block-photos-one {
-  text-decoration: none;
+.block-photos-one:hover .overlay,
+.block-photos-one:focus .overlay {
+    transform: translateY(0%);
 }
 
 .title-portf-pic {
@@ -755,4 +743,15 @@ height: 300px;
   border: 1px solid transparent;
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
     0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+}
+
+
+.backdrop{
+  position: fixed;
+  top:0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  border-color: #6e0c0c;
+  
 }
